refractor unncessary utils